@@ -1989,6 +1989,7 @@ Valid embedded codes for custom prompts include:\n\r\
 %Km:  Display the tanks current mana   %KM:  Display the tanks maximum mana\n\r\
 %Kv:  Display the tanks current moves  %KV:  Display the tanks maximum moves\n\r\
 %Ke:  Display the tanks name           %KE:  Display the tanks health\n\r\
+%l :  Display % area visited           %L :  Display % world visited\n\r\
 %I :  Display hidden/invis. status     %@ :  Display the weather here\n\r\
 %d :  Display the range to your victim %D :  Display ammo remaining\n\r\
 %B :  Go to a new line                 %z :  Display current area name\n\r\
