@@ -1325,7 +1325,7 @@ DROW=<RACE>\
 Drow are the dark cousins to elves.  Their existence living underground had radiated their bodies with \
 dark magic and give them advantages in the cold, dark world.  However, they hurt plenty when exposed to \
 light.  They have the ability to see in the dark, and can prove to be fiercesome fighters.  All Drow \
-start off with the ability to cast darkness and faerie fire.
+start off with the ability to cast darkness globe and faerie fire.
 
 ELF=<RACE>\
 Elves are slightly shorter and more slender than humans, but are quick and agile.  They \
